# titanos

./: CMakeLists.txt  README.md
titanos/: main.c  maintest.ti  test.ti  titanos.y
titanos.xcodeproj/: project.pbxproj
titanos.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
titanos.xcodeproj/xcuserdata/lerno.xcuserdatad/xcschemes/: xcschememanagement.plist
titanos/src/: analyser.c  analyser.h  ansi_color.h  arena_allocator.c  arena_allocator.h  array.c  array.h  ast_types.c  ast_types.h  ast_utils.c  ast_utils.h  attributes.c  attributes.h  common.h  compiler.c  compiler.h  component.c  component.h  constant_folding.c  constant_folding.h  debug.c  debug.h  decl.c  decl.h  diagnostics.c  diagnostics.h  error.c  error.h  expr.c  expr.h  expression.c  expression.h  expression_analysis.c  expression_analysis.h  file.c  file.h  fnv.c  fnv.h  header_parsing.c  header_parsing.h  (+37 more)
titanos/src/building/: builder.c  builder.h  builtins.c  builtins.h  dependecy.h
titanos/src/codegen/: codegen.c  codegen.h
titanos/src/readers/: manifest.c  manifest.h
titanos/src/targets/: target_info.c  target_info.h
titanos/src/types/: type.c  type.h
titanos/src/values/: bigint.c  bigint.h  value.c  value.h
